--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,62 +1,37 @@
 <block-ui>
-    <div class="box box-primary">
-        <div class="box-body">
-           <div class="widget-controls">
-                <a  class="btn btn-info btn-sm mb-1" routerLink="/users/create"><i class="fa fa-plus"></i> Add User</a>
-                <!--<button class="btn btn-success btn-sm mb-1" type="button" (click)="exportData()"><i class="fa fa-bars"></i> Export Data</button>
-
-                <button class="btn btn-success btn-sm mb-1" type="button" (click)="print()"><i class="fa fa-bars"></i> Print</button>
-                <button class="btn btn-primary btn-sm mb-1" type="button" data-toggle="collapse" data-target="#advancedSearch" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-search"></i> Advanced Search
-                </button>
-                <!-- <button class="btn btn-success btn-sm mb-1" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"></i> Export Data
-
-                </button>
-                <div class="dropdown-menu dropdown-menu-right">
-                    <a class="dropdown-item" (click)="exportData()">Excel</a>
-                    <a class="dropdown-item" (click)="exportPdf()">PDF</a>
-                </div> -->
-
-
-            </div>
-            <span id="responseText"></span>
-            <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
-                <thead>
-                  <tr>
-                    <th>firstname</th>
-                    <th>lastname</th>
-                    <th>email</th>
-                    <th>phone</th>                    
-                    <th>username</th>
-                    <th>status</th>
-                    <th></th>
-                  </tr>
-                </thead>
-                <tbody>
-                 <tr *ngFor="let group of users">
-                       <td>{{group.firstname}}</td>
-                       <td>{{group.lastname}}</td>
-                       <td>{{group.email}}</td>
-                       <td>{{group.phone}}</td>
-                       <td>{{group.username}}</td>
-                       <td>{{group.status}}</td>
-                       <td></td>
-                   </tr>
-                </tbody>
-              </table>
-           
-        </div>
-    </div>
-</block-ui>
-                
-
-
-
-
-
-
-
-
-
-
-
-
+  <div class="box box-primary">
+      <div class="box-body">
+         <div class="widget-controls">
+            <a  class="btn btn-info btn-sm mb-1" routerLink="/users/create"><i class="fa fa-plus"></i> Add User</a>             
+          </div>
+          <span id="responseText"></span>
+          <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
+              <thead>
+                <tr>
+                   <th></th>
+                  <th>Name</th>
+                  <th>Email</th>
+                  <th>Mobile</th>
+                  <th>IdNumber</th>
+                  <th>Store</th>
+                  <th>Roles</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+               <tr *ngFor="let item of data; let i = index">
+                     <td>{{i+1}}</td>
+                     <td>{{item.firstname}} {{item.lastname}}</td>
+                     <td>{{item.email}}</td>
+                     <td>{{item.mobile}}</td>
+                     <td>{{item.id_number}}</td>
+                     <td>{{item.store_id}}</td>  
+                     <td>{{item.role}}</td>                      
+                     <td> <div class="float-right"> <button type="button" class="btn btn-xs btn-info" title="View details" style="margin-right: 5px"> <i class="fa fa-eye"></i></button><button type="button" class="btn btn-xs btn-warning" title="Edit this user details" style="margin-right: 5px" (click)="onEdit(item)"> <i  class="fa fa-pencil"></i></button><button type="button" class="btn btn-xs btn-danger" title="Trash this user details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button> </div></td>
+                 </tr>
+              </tbody>
+            </table>
+         
+      </div>
+  </div>
+</block-ui>              
