--- a/src/styles.css
+++ b/src/styles.css
@@ -423,7 +423,7 @@ div.card-body{
     border-radius: 5px;
 }
 
-app-be-update,app-notifications,app-login,app-create,app-store,app-businessentity,app-sales,app-users,app-released,app-myaccount,app-deliveries,app-collections,app-invoicing,app-dashboard{
+app-be-update,app-update,app-notifications,app-login,app-create,app-store,app-businessentity,app-sales,app-users,app-released,app-myaccount,app-deliveries,app-collections,app-invoicing,app-dashboard{
     width:100%;
 }
 .datatable-row-wrapper {
@@ -454,4 +454,9 @@ hr {
     width: auto;
     margin-left: -15px;
     margin-right: -15px;
+}
+ngb-tabset>.nav-tabs {
+    border-bottom: 1px solid #dee2e6;
+    margin-bottom: 30px;
+    font-size: 16px;
 }
