--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -3,8 +3,8 @@
   <div class="sidebar-header">                
     <img src="./assets/logo.png"/>               
   </div>
-    <div class="container demo d-none d-md-block" *ngIf="currentUser">
-       <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0,ngb-panel-1,ngb-panel-2" class="panel-group">
+    <div class="container demo d-none d-md-block" >
+      <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0" class="panel-group">
         <ngb-panel class="panel-default">
           <ng-template ngbPanelTitle class="panel-heading">
             <h4 class="panel-title">
@@ -72,7 +72,7 @@
     </div><!-- container -->
   </nav>
   <div id="content">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" *ngIf="currentUser" >
+    <nav class="navbar navbar-expand-lg navbar-light bg-light"  >
       <div class="container-fluid topbar">
         <button type="button" id="sidebarCollapse" class="btn" style="background: #7386D5; color:white; margin-left: -60px">
           <i class="fa fa-angle-double-left"></i>
@@ -85,7 +85,7 @@
         <!--navbar-toggler-icon -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <div>                            
-          <h2 class="store-name">{{currentUser.user.firstname}} @ {{currentUser.store.name}}</h2>
+          <h2 class="store-name">Game -Garden City</h2>
           </div>
           <ul class="nav navbar-nav ml-auto"> 
             <li class="nav-item">
@@ -119,22 +119,6 @@
                 <i class="fa fa-user" style="color:#88b840"></i> My Account
               </a>
             </li>
-            <li class="nav-item">
-              <a class="top-link myaccount-link" routerLink="" (click)="logout()">
-                <i class="fa fa-sign-out" style="color:#b84040"></i> Logout
-              </a>
-            </li>
-            <!--li class="nav-item">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Separated link</a>
-              </div>
-              
-            </li-->
           </ul>
         </div>
       </div>
