api url for production

--- a/src/styles.css
+++ b/src/styles.css
@@ -464,3 +464,20 @@ ngb-tabset>.nav-tabs {
 .navbar-expand-lg .navbar-nav .dropdown-menu {
     position: relative !important;
 }
+
+.toast-success {
+    background-color: #51A351 !important;
+  }
+  .toast-error {
+    background-color: #BD362F !important;
+  }
+  .toast-info {
+    background-color: #2F96B4 !important;;
+  }
+  .toast-warning {
+    background-color: #F89406 !important;;
+  }
+
+
+
+
