--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -2,7 +2,7 @@
     <div class="box box-primary">
         <div class="box-body">
            <div class="widget-controls">
-              <a  class="btn btn-info btn-sm mb-1" routerLink="/onboarding/create"><i class="fa fa-plus"></i> Add Business Organisation</a>             
+              <a  class="btn btn-info btn-sm mb-1" routerLink="/partners/create"><i class="fa fa-plus"></i> Add Partner</a>
             </div>
             <span id="responseText"></span>
             <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
@@ -18,19 +18,18 @@
                   </tr>
                 </thead>
                 <tbody>
-                 <tr *ngFor="let item of data; let i = index">
+                 <tr *ngFor="let item of data; let i = index" title={{item.id}}>
                        <td>{{i+1}}</td>
                        <td>{{item.name}}</td>
                        <td>{{item.email}}</td>
                        <td>{{item.mobile}}</td>
                        <td>{{item.location}}</td>
-                       <td>{{item.speciality}}</td>                       
-                       <td> <div class="float-right"> <button type="button" class="btn btn-xs btn-info" title="View details" style="margin-right: 5px"> <i class="fa fa-eye"></i></button><button type="button" class="btn btn-xs btn-warning" title="Edit this business details" style="margin-right: 5px" (click)="onEdit(item)"> <i  class="fa fa-pencil"></i></button><button type="button" class="btn btn-xs btn-danger" title="Trash this Business details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button> </div></td>
+                       <td>{{item.speciality}}</td>
+                       <td> <div class="float-right"> <button type="button" class="btn btn-xs btn-warning" title="Edit this business details" style="margin-right: 5px" (click)="onEdit(item)"> <i  class="fa fa-pencil"></i></button><button type="button" class="btn btn-xs btn-danger" title="Trash this Business details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button> </div></td>
                    </tr>
                 </tbody>
               </table>
-           
+
         </div>
     </div>
 </block-ui>
-                
