--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@ a:focus {
 
 
 .topbar {
-    
+
     padding-right: 0px !important;
     }
 
@@ -138,7 +138,7 @@ a[aria-expanded="true"] {
 
   #sidebar ul li svg:not(:root).svg-inline--fa{
          float: right;
-        
+
      }
 
 #sidebar ul li .fa{
@@ -252,7 +252,7 @@ a.article:hover {
 }
 #views{
     margin-left: 20px;
-   
+
 }
 
 /*******************************
@@ -265,7 +265,7 @@ a.article:hover {
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
    }
     #accordion{
-  
+
     border-radius: 5px;
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
    }
@@ -294,12 +294,12 @@ a.article:hover {
         width: 100%;
         /*padding: 15px;
          background-color: #EBEDF0;*/
-        text-decoration: none;       
+        text-decoration: none;
         background-color: rgba(0,0,0,.03);
         font-size: 1.3em;
     }
     .list-group-item, .card-header {
-   
+
     padding: .75rem 0.5rem !important;
 }
 .card-header > button {
@@ -340,9 +340,9 @@ div.card-body{
     margin-bottom: 20px;
     margin-top: 25%;
     background-color: #fff;
-    border: 1px solid transparent;       
+    border: 1px solid transparent;
     border-radius: 4px;
-    
+
 }
 
 .login-panel>.panel-heading {
@@ -360,10 +360,10 @@ div.card-body{
    .dataTable{
         font-size: 0.9em;
     }
-  
+
 .table td  {
     padding: .3em !important;
-    vertical-align: middle !important;   
+    vertical-align: middle !important;
 }
 .table th {
     margin-top: .5em !important;
@@ -376,7 +376,7 @@ div.card-body{
     }
 
 .page-title{
-    font-size: 1.6em;    
+    font-size: 1.6em;
     color: #255fb6;
     font-weight: 500;
 }
@@ -424,7 +424,7 @@ div.card-body{
     border-radius: 5px;
 }
 
-app-be-update,app-update,app-notifications,app-login,app-create,app-store,app-businessentity,app-sales,app-users,app-released,app-myaccount,app-deliveries,app-collections,app-invoicing,app-dashboard{
+app-be-update,app-update,app-notifications,app-login,app-create,app-store,app-partners,app-sales,app-users,app-released,app-myaccount,app-deliveries,app-collections,app-invoicing,app-dashboard{
     width:100%;
 }
 .datatable-row-wrapper {
@@ -448,7 +448,7 @@ app-be-update,app-update,app-notifications,app-login,app-create,app-store,app-bu
 font-size: 1.4em !important;
 color: mediumblue;
 }
-hr {  
+hr {
     border-top: 2px solid rgba(0,0,0,.1) !important;
     /* color: blue; */
     background-color: blue;
