--- a/src/app/pages/stores/store.component.html
+++ b/src/app/pages/stores/store.component.html
@@ -3,7 +3,7 @@
         <div class="box-body">
            <div class="widget-controls">
                <a  class="btn btn-info btn-sm mb-1" routerLink="/stores/create"><i class="fa fa-plus"></i> Add Store</a>
-               
+
             </div>
             <span id="responseText"></span>
             <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
@@ -14,25 +14,24 @@
                     <th>Disburse Email</th>
                     <th>Contact Person</th>
                     <th>Contact Person Mobile</th>
-                    
+
                     <th>Actions</th>
                   </tr>
                 </thead>
                 <tbody>
                  <tr *ngFor="let item of data; let i = index" title="{{item.id}}">
                        <td>{{item.name}}</td>
-                       <td>{{item.partner}}</td>
+                       <td>{{item.partner.name}}</td>
                        <td>{{item.disburse_email}}</td>
                        <td>{{item.contact_person}}</td>
                        <td>{{item.contact_person_mobile}}</td>
-                        <td> <div class="float-right"> <button type="button" class="btn btn-xs btn-info" title="View details" style="margin-right: 5px"> <i class="fa fa-eye"></i></button><button type="button" class="btn btn-xs btn-warning" title="Edit this business details" style="margin-right: 5px" (click)="onEdit(item)"> <i  class="fa fa-pencil"></i></button><button type="button" class="btn btn-xs btn-danger" title="Trash this Business details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button> </div></td>
+                        <td> <div class="float-right"> <button type="button" class="btn btn-xs btn-warning" title="Edit this business details" style="margin-right: 5px" (click)="onEdit(item)"> <i  class="fa fa-pencil"></i></button><button type="button" class="btn btn-xs btn-danger" title="Trash this Business details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button> </div></td>
                    </tr>
                 </tbody>
               </table>
-           
+
         </div>
     </div>
 </block-ui>
 
 
-                
