--- a/src/app/pages/users/update/update.component.html
+++ b/src/app/pages/users/update/update.component.html
@@ -30,111 +30,111 @@
                 </div>
                 <hr>
               <div class="row">
-               
-                  
+
+
                   <div class="col-md-1"></div>
 
-            <form autocomplete="off" [formGroup]="userFormAdd" (ngSubmit)="onAddSubmit(userFormAdd)" class="col-md-11 form-horizontal">
-           
+            <form autocomplete="off" [formGroup]="userFormEdit" (ngSubmit)="onAddSubmit(userFormEdit)" class="col-md-11 form-horizontal">
+
 
                     <div class="row form-group">
-                       
-                            <label class="control-label col-sm-3" for="inputName">First Name</label> 
+
+                            <label class="control-label col-sm-3" for="inputName">First Name</label>
                             <div class="col-sm-7">
                             <input formControlName="firstname" class="form-control validation-field" placeholder="First Name" type="text">
-                            <small class="text-danger" *ngIf="userFormAdd.get('firstname').touched && userFormAdd.get('firstname').hasError('required')">First Name is required</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('firstname').touched && userFormAdd.get('firstname').hasError('pattern')">Invalid First Name</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('firstname').touched && userFormAdd.get('firstname').hasError('minlength')">First Name should be at least 3 characters</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('firstname').touched && userFormAdd.get('firstname').hasError('maxlength')">First Name should be at most 45 characters</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('firstname').touched && userFormEdit.get('firstname').hasError('required')">First Name is required</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('firstname').touched && userFormEdit.get('firstname').hasError('pattern')">Invalid First Name</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('firstname').touched && userFormEdit.get('firstname').hasError('minlength')">First Name should be at least 3 characters</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('firstname').touched && userFormEdit.get('firstname').hasError('maxlength')">First Name should be at most 45 characters</small>
                         </div>
                     </div>
                     <div class="row form-group">
-                       
-                            <label class="control-label col-sm-3" for="inputName">Last Name</label>  
+
+                            <label class="control-label col-sm-3" for="inputName">Last Name</label>
                                                          <div class="col-sm-7">
                             <input formControlName="lastname" class="form-control validation-field" placeholder="Last Name" type="text">
-                            <small class="text-danger" *ngIf="userFormAdd.get('lastname').touched && userFormAdd.get('lastname').hasError('required')">Last Name is required</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('lastname').touched && userFormAdd.get('lastname').hasError('pattern')">Invalid Last Name</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('lastname').touched && userFormAdd.get('lastname').hasError('minlength')">Last Name should be at least 3 characters</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('lastname').touched && userFormAdd.get('lastname').hasError('maxlength')">Last Name should be at most 45 characters</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('lastname').touched && userFormEdit.get('lastname').hasError('required')">Last Name is required</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('lastname').touched && userFormEdit.get('lastname').hasError('pattern')">Invalid Last Name</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('lastname').touched && userFormEdit.get('lastname').hasError('minlength')">Last Name should be at least 3 characters</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('lastname').touched && userFormEdit.get('lastname').hasError('maxlength')">Last Name should be at most 45 characters</small>
                         </div>
                     </div>
                    <!---- <div class="row form-group">
-                       
-                            <label class="control-label col-sm-3" for="inputName">User Name</label>  
+
+                            <label class="control-label col-sm-3" for="inputName">User Name</label>
                                                          <div class="col-sm-7">
                             <input formControlName="userName" class="form-control validation-field" placeholder="User Name" type="text">
-                            <small class="text-danger" *ngIf="userFormAdd.get('userName').touched && userFormAdd.get('userName').hasError('required')">User Name is required</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('userName').touched && userFormAdd.get('userName').hasError('pattern')">Invalid User Name</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('userName').touched && userFormAdd.get('userName').hasError('minlength')">Last Name should be at least 3 characters</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('userName').touched && userFormAdd.get('userName').hasError('maxlength')">Last Name should be at most 45 characters</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('userName').touched && userFormEdit.get('userName').hasError('required')">User Name is required</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('userName').touched && userFormEdit.get('userName').hasError('pattern')">Invalid User Name</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('userName').touched && userFormEdit.get('userName').hasError('minlength')">Last Name should be at least 3 characters</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('userName').touched && userFormEdit.get('userName').hasError('maxlength')">Last Name should be at most 45 characters</small>
                         </div>
                     </div>-->
                     <div class="row form-group">
-                       
-                            <label class="control-label col-sm-3" for="inputName">Email</label>  
+
+                            <label class="control-label col-sm-3" for="inputName">Email</label>
                                                          <div class="col-sm-7">
                             <input formControlName="email" class="form-control validation-field" placeholder="Email" type="email">
-                            <small class="text-danger" *ngIf="userFormAdd.get('email').touched && userFormAdd.get('email').hasError('required')">Email is required</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('email').touched && userFormAdd.get('email').hasError('email')">Invalid email address</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('email').touched && userFormEdit.get('email').hasError('required')">Email is required</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('email').touched && userFormEdit.get('email').hasError('email')">Invalid email address</small>
                         </div>
 					</div>
-					
+
 					<div class="row form-group">
-                       
-                            <label class="control-label col-sm-3" for="inputName">Id Number</label>  
+
+                            <label class="control-label col-sm-3" for="inputName">Id Number</label>
                                                          <div class="col-sm-7">
                             <input formControlName="id_number" class="form-control validation-field" placeholder="Id Number" type="id_number">
-                            <small class="text-danger" *ngIf="userFormAdd.get('id_number').touched && userFormAdd.get('id_number').hasError('required')">Id Number is required</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('id_number').touched && userFormAdd.get('id_number').hasError('id_number')">Id Number</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('id_number').touched && userFormEdit.get('id_number').hasError('required')">Id Number is required</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('id_number').touched && userFormEdit.get('id_number').hasError('id_number')">Id Number</small>
                         </div>
                     </div>
                     <div class="row form-group">
-                       
+
                             <label class="control-label col-sm-3" for="inputName">Phone Number</label>
                                                            <div class="col-sm-7">
                             <input formControlName="mobile" class="form-control validation-field" placeholder="Phone Number" type="text">
-                            <small class="text-danger" *ngIf="userFormAdd.get('mobile').touched && userFormAdd.get('mobile').hasError('required')">Phone Number is required</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('mobile').touched && userFormAdd.get('mobile').hasError('pattern')">Format should be either 2547XXXXXXX or 07XXXXXXXX</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('mobile').touched && userFormEdit.get('mobile').hasError('required')">Phone Number is required</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('mobile').touched && userFormEdit.get('mobile').hasError('pattern')">Format should be either 2547XXXXXXX or 07XXXXXXXX</small>
                         </div>
                     </div>
                     <div class="row form-group">
-                       
-                            <label class="control-label col-sm-3" for="inputContacts">Gender</label>   
+
+                            <label class="control-label col-sm-3" for="inputContacts">Gender</label>
                                                         <div class="col-sm-7">
                             <select formControlName="gender" class="form-control validation-field">
                                 <option value="">Select Gender</option>
-                      <option *ngFor="let o of genderList" [value]="o.name">{{o.name}}</option>
+                      <option *ngFor="let o of genderList" [value]="o.id">{{o.name}}</option>
                   </select>
-                            <small class="text-danger" *ngIf="userFormAdd.get('gender').touched && userFormAdd.get('gender').hasError('required')">Gender is required</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('gender').touched && userFormEdit.get('gender').hasError('required')">Gender is required</small>
                         </div>
                     </div>
 
                     <div class="row form-group">
-                       
-                            <label class="control-label col-sm-3" for="inputContacts">Store</label>   
+
+                            <label class="control-label col-sm-3" for="inputContacts">Store</label>
                                                         <div class="col-sm-7">
                             <select formControlName="store_id" class="form-control validation-field">
                                 <option value="">Select Store</option>
-                      <option *ngFor="let o of storeOptions" [value]="o.name">{{o.name}}</option>
+                      <option *ngFor="let o of storeOptions" [value]="o.id">{{o.name}}</option>
                   </select>
-                            <small class="text-danger" *ngIf="userFormAdd.get('store_id').touched && userFormAdd.get('store_id').hasError('required')">Store is required</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('store_id').touched && userFormEdit.get('store_id').hasError('required')">Store is required</small>
                         </div>
                     </div>
-                    <div class="row form-group">                       
-                            <label class="control-label col-sm-3" for="inputName">Role</label> 
+                    <div class="row form-group">
+                            <label class="control-label col-sm-3" for="inputName">Role</label>
                             <div class="col-sm-7">
                             <select formControlName="role" class="form-control validation-field" id="inputStatus">
                                 <option value="">Select Role</option>
                           <option *ngFor="let o of roleList" [value]="o.name">{{o.name}}</option>
                       </select>
-                            <small class="text-danger" *ngIf="userFormAdd.get('role').touched && userFormAdd.get('role').hasError('required')">Language is required</small>
+                            <small class="text-danger" *ngIf="userFormEdit.get('role').touched && userFormEdit.get('role').hasError('required')">Language is required</small>
                         </div>
                     </div>
-                
-           
+
+
              <!---   <div class="row align-roles-right">
-                    <button [disabled]="!userFormAdd.valid" class="btn btn-danger" type="submit">Submit</button>
+                    <button [disabled]="!userFormEdit.valid" class="btn btn-danger" type="submit">Submit</button>
                 </div>-->
                 <div class="row form-group">
                         <div class="col-sm-3"></div>
@@ -142,10 +142,10 @@
                           <div class="float-right ">
                             <button  class="btn btn-danger " type="cancel" style="margin-right: 10px;
     min-width: 100px;" routerLink="/users/">Cancel</button>
-                            <button disabled=[userFormAdd.invalid]  class="btn btn-success " type="submit" style="min-width: 100px;">Submit</button>
+                            <button [disabled]="userFormEdit.invalid"  class="btn btn-success " type="submit" style="min-width: 100px;">Submit</button>
                           </div>
                         </div>
-                      </div> 
+                      </div>
             </form>
             <div *ngIf="errorMessage !== 'SHOWERROR'" class="alert alert-danger alert-dismissible fade show" role="alert">
                 <button aria-label="Close" class="close" data-dismiss="alert" type="button">
@@ -158,5 +158,5 @@
     </div>
     </div>
     </div>
-    
+
 </block-ui>
