--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -2,7 +2,7 @@
   <div class="box box-primary">
       <div class="box-body">
          <div class="widget-controls">
-            <a  class="btn btn-info btn-sm mb-1" routerLink="/users/create"><i class="fa fa-plus"></i> Add User</a>             
+            <a  class="btn btn-info btn-sm mb-1" routerLink="/users/create"><i class="fa fa-plus"></i> Add User</a>
           </div>
           <span id="responseText"></span>
           <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
@@ -25,13 +25,13 @@
                      <td>{{item.email}}</td>
                      <td>{{item.mobile}}</td>
                      <td>{{item.id_number}}</td>
-                     <td>{{item.store_id}}</td>  
-                     <td>{{item.role}}</td>                      
-                     <td> <div class="float-right"> <button type="button" class="btn btn-xs btn-info" title="View details" style="margin-right: 5px"> <i class="fa fa-eye"></i></button><button type="button" class="btn btn-xs btn-warning" title="Edit this user details" style="margin-right: 5px" (click)="onEdit(item)"> <i  class="fa fa-pencil"></i></button><button type="button" class="btn btn-xs btn-danger" title="Trash this user details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button> </div></td>
+                     <td>{{item.store.name}}</td>
+                     <td>{{item.role}}</td>
+                     <td> <div class="float-right"> <button type="button" class="btn btn-xs btn-warning" title="Edit this user details" style="margin-right: 5px" (click)="onEdit(item)"> <i  class="fa fa-pencil"></i></button><button type="button" class="btn btn-xs btn-danger" title="Trash this user details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button> </div></td>
                  </tr>
               </tbody>
             </table>
-         
+
       </div>
   </div>
-</block-ui>              
+</block-ui>
