first time login-change password-forgot password

--- a/src/app/pages/change-password/change-password.component.html
+++ b/src/app/pages/change-password/change-password.component.html
@@ -1,59 +1,90 @@
 <block-ui>
-    <div class="d-flex justify-content-center align-items-center w-100 h-100 login-container" style="background-image: url('assets/img/app/safback.jpg')">
-        <div class="col-xl-3 col-md-6 col-10 text-center displaytablecell">
-            <h2><span>Lipalater Partners Portal</span></h2>
-            <h3 style="color:#fff">Change Password</h3>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <div class="login-panel panel panel-default" style="border-color: #0d98ba;">
+          <div class="panel-heading" con>
+            <img src="./assets/logo.png" alt="Login Image">
 
-            <div class="card border-0 box-shadow rounded-5">
-                <div class="card-block text-center pb-1">
-                    <form autocomplete="off" [formGroup]="form" (ngSubmit)="onSubmit(form)" class="text-left mt-4">
-                        <div class="form-group">
-                            <label>Temporary Password</label>
-                            <input formControlName="temporaryPassword" class="form-control validation-field" placeholder="Temporary Password" type="password">
-                            <small class="text-danger" *ngIf="form.get('temporaryPassword').touched && form.get('temporaryPassword').hasError('required')">Temporary Password is required</small>
-                        </div>
-                        <div class="form-group">
-                            <label><b>Password Rules</b></label>
-                            <blockquote class="card-bodyquote" style="">
-                                <div style="height: 50px; overflow-y: scroll;">
-                                    <ul>
-                                        <li *ngFor="let item of passwordList">{{item}}</li>
-                                    </ul>
-                                </div>
-                            </blockquote>
+          </div>
+          <div class="panel-body">
 
-                        </div>
-                        <div class="form-group">
-                            <label>New Password</label>
-                            <input formControlName="newPassword" class="form-control validation-field" placeholder="New Password" type="password">
-                            <small class="text-danger" *ngIf="form.get('newPassword').touched && form.get('newPassword').hasError('required')">Password is required</small>
-                            <small class="text-danger" *ngIf="form.get('newPassword').touched && form.get('newPassword').hasError('minlength')">Password isn't long enough, minimum of 6 characters</small>
-                            <small class="text-danger" *ngIf="form.get('newPassword').touched && form.get('newPassword').hasError('pattern')"><p>The Password must contain at least 1 lowercase alphabetical character</p><p>The Password must contain at least 1 uppercase alphabetical character</p><p>The Password must contain at least 1 numeric character</p><p>The Password must contain at least one special character <b>!@#\$%\^&\*</b></p></small>
-                        </div>
-                        <div class="form-group">
-                            <label>Confirm New Password</label>
-                            <input formControlName="newPasswordRepeat" class="form-control validation-field" placeholder="New Password" type="password">
-                            <small class="text-danger" *ngIf="form.get('newPasswordRepeat').touched && form.get('newPasswordRepeat').hasError('required')">Confirm New Password is required</small>
-                            <small class="text-danger" *ngIf="form.get('newPasswordRepeat').touched && form.get('newPasswordRepeat').hasError('mismatchedPasswords')">Passwords do not match</small>
-                        </div>
-                        <div class="form-group">
-                            <label for="inputContacts">Security Question</label>
-                            <select formControlName="securityQuestion" class="form-control validation-field">
-                        <option *ngFor="let o of securityQuestionsList" [ngValue]="o.id">{{o.question}}</option>
-                    </select>
-                            <small class="text-danger" *ngIf="form.get('securityQuestion').touched && form.get('securityQuestion').hasError('required')">Security Question is required</small>
-                        </div>
-                        <div class="form-group">
-                            <label>Security Question Answer</label>
-                            <input formControlName="securityQuestionAnswer" class="form-control validation-field" placeholder="Answer" type="text">
-                            <small class="text-danger" *ngIf="form.get('securityQuestionAnswer').touched && form.get('securityQuestionAnswer').hasError('required')">Security Question Answer is required</small>
-                        </div>
-                        <div class="form-group">
-                            <button [disabled]="!form.valid" class="btn btn-block" type="submit" style="color:#fff;">Change Password</button>
-                        </div>
-                    </form>
+
+            <h3>Change Password</h3>
+
+            <form autocomplete="off" [formGroup]="form" (ngSubmit)="onSubmit(form)" class="text-left mt-4">
+              <fieldset>
+
+                <div class="form-group">
+                  <label><b>Password Rules</b></label>
+                  <blockquote class="card-bodyquote" style="">
+                    <div style="height: 50px; overflow-y: scroll;">
+                      <ul>
+                        <li *ngFor="let item of passwordList">{{item}}</li>
+                      </ul>
+                    </div>
+                  </blockquote>
+
                 </div>
-            </div>
+                <div class="form-group">
+                  <label>Password</label>
+                  <input formControlName="password" class="form-control validation-field" placeholder="New Password"
+                    type="password">
+                  <password-strength-meter [password]="password.value" [enableFeedback]="true"
+                    (strengthChange)="onPasswordStrengthChanged($event)"></password-strength-meter>
+                  <small id="passwordHelpBlock" class="form-text text-muted">
+                    Your password must be 8-20 characters long, contain letters and numbers, and must not contain
+                    spaces, special characters,
+                    or emoji.
+                  </small>
+                  <div class="invalid-feedback">
+                    Please provide a valid Password.
+                  </div>
+
+
+                </div>
+                <div class="form-group">
+                  <label>Confirm New Password</label>
+                  <input formControlName="passwordRepeat" class="form-control validation-field"
+                    placeholder="New Password" type="password">
+                  <small class="text-danger"
+                    *ngIf="form.get('passwordRepeat').touched && form.get('passwordRepeat').hasError('required')">Confirm
+                    New Password is required</small>
+                  <small class="text-danger"
+                    *ngIf="form.get('passwordRepeat').touched && form.get('passwordRepeat').hasError('mismatchedPasswords')">Passwords
+                    do not match</small>
+                </div>
+                <div class="form-group">
+                  <label for="inputContacts">Security Question</label>
+                  <select formControlName="securityQuestion" class="form-control validation-field">
+                    <option *ngFor="let o of securityQuestionsList" [ngValue]="o.id">{{o.question}}</option>
+                  </select>
+                  <small class="text-danger"
+                    *ngIf="form.get('securityQuestion').touched && form.get('securityQuestion').hasError('required')">Security
+                    Question is required</small>
+                </div>
+                <div class="form-group">
+                  <label>Security Question Answer</label>
+                  <input formControlName="securityQuestionAnswer" class="form-control validation-field"
+                    placeholder="Answer" type="text">
+                  <small class="text-danger"
+                    *ngIf="form.get('securityQuestionAnswer').touched && form.get('securityQuestionAnswer').hasError('required')">Security
+                    Question Answer is required</small>
+                </div>
+                <div class="form-group">
+                  <button [disabled]="form.invalid" class="btn btn-block btn-primary" type="submit">Change
+                    Password</button>
+                </div>
+
+              </fieldset>
+            </form>
+
+
+          </div>
         </div>
+      </div>
     </div>
+  </div>
+
 </block-ui>
