--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -1,53 +1,33 @@
-<div class="box box-primary">    
-  <div class="box-body">
-     <span id="responseText"></span>
-      <table class="table table-striped" id="salestable">
+<block-ui>
+  <div class="box box-primary">
+    <div class="box-body">
+
+      <span id="responseText"></span>
+      <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
         <thead>
-          <tr class="header">                    
-            <th>Customer Name</th>
-            <th>Id Number</th>
-            <th>Item(s)</th>
-            <th>Amount Approved</th>
-            <th>Status</th>
-            <th>Time Applied</th>
+          <tr>
             <th></th>
+            <th>Customer</th>
+            <th>Cust ID</th>
+            <th>Customer Mobile</th>
+            <th>Item</th>
+            <th>Pick up type</th>
+            <th>Date approved</th>
           </tr>
         </thead>
         <tbody>
-          <tr class="">
-            <td>Jackson Kiarie</td>
-            <td>9876543</td>
-            <td>Dining Table</td>
-            <td>KES 25,000</td>
-            <td>Processing</td>
-            <td>12 Jan 2019 10.08 AM</td>
-            <td>
-              <button type="button" class="btn btn-xs btn-primary" onclick="editTask(1)">   
-                <i class="fa fa-eye"></i>                    
-              </button>  
-            </td>
-          </tr>
-          <tr class="">
-            <td>Purity Maina</td>
-            <td>10293847</td>
-            <td>Bean Bag</td>
-            <td>KES 35,000</td>
-            <td>Released</td>
-            <td>25 Jan 2019 10.08 AM</td>
-            <td>
-              <button type="button" class="btn btn-xs btn-primary" onclick="editTask(1)">    
-                <i class="fa fa-eye"></i>                    
-              </button>  
-            </td>
-          </tr>
+          <tr *ngFor="let item of data; let i = index" title={{item.id}}>
+            <td>{{i+1}}</td>
+            <td>{{item.cust}}</td>
+            <td>{{item.id_number}}</td>
+            <td>{{item.item}}</td>
+            <td>{{item.pick_up}}</td>
+            <td>{{item.approved_at}}</td>
 
+          </tr>
         </tbody>
       </table>
+
+    </div>
   </div>
-</div>
-<script>
-  $(document).ready(function() {
-  $('#salestable').DataTable();
-  $('#salestable_length').html('<p class="page-title">Sales</p>');
-  } );
-</script>
+</block-ui>
