--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,37 +1,45 @@
 <block-ui>
   <div class="box box-primary">
-      <div class="box-body">
-         <div class="widget-controls">
-            <a  class="btn btn-info btn-sm mb-1" routerLink="/users/create"><i class="fa fa-plus"></i> Add User</a>
-          </div>
-          <span id="responseText"></span>
-          <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
-              <thead>
-                <tr>
-                   <th></th>
-                  <th>Name</th>
-                  <th>Email</th>
-                  <th>Mobile</th>
-                  <th>IdNumber</th>
-                  <th>Store</th>
-                  <th>Roles</th>
-                  <th>Action</th>
-                </tr>
-              </thead>
-              <tbody>
-               <tr *ngFor="let item of data; let i = index">
-                     <td>{{i+1}}</td>
-                     <td>{{item.firstname}} {{item.lastname}}</td>
-                     <td>{{item.email}}</td>
-                     <td>{{item.mobile}}</td>
-                     <td>{{item.id_number}}</td>
-                     <td>{{item.store.name}}</td>
-                     <td>{{item.role}}</td>
-                     <td> <div class="float-right"> <button type="button" class="btn btn-xs btn-warning" title="Edit this user details" style="margin-right: 5px" (click)="onEdit(item)"> <i  class="fa fa-pencil"></i></button><button type="button" class="btn btn-xs btn-danger" title="Trash this user details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button> </div></td>
-                 </tr>
-              </tbody>
-            </table>
-
+    <div class="box-body">
+      <div class="widget-controls">
+        <a class="btn btn-info btn-sm mb-1" routerLink="/users/create"><i class="fa fa-plus"></i> Add User</a>
       </div>
+      <span id="responseText"></span>
+      <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Mobile</th>
+            <th>IdNumber</th>
+            <th>Store</th>
+            <th>Roles</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of data; let i = index">
+            <td>{{i+1}}</td>
+            <td>{{item.firstname}} {{item.lastname}}</td>
+            <td>{{item.email}}</td>
+            <td>{{item.mobile}}</td>
+            <td>{{item.id_number}}</td>
+            <td>{{item.store.name}}</td>
+            <td>{{item.role}}</td>
+            <td>
+
+              <div class="float-right" *ngIf="!(item.email == currentUser.user.email)">
+                <button type="button" class="btn btn-xs btn-warning" title="Edit this user details"
+                  style="margin-right: 5px" (click)="onEdit(item)"> <i class="fa fa-pencil"></i></button>
+                <button type="button" class="btn btn-xs btn-danger" title="Trash this user details"
+                  (click)="onDelete(item)"> <i class="fa fa-trash"></i></button>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
   </div>
 </block-ui>
